--- a/config/CMakeLists.txt
+++ b/config/CMakeLists.txt
@@ -52,6 +52,7 @@ find_package(catkin REQUIRED COMPONENTS
  add_message_files(
    FILES
    Control.msg
+   Coords.msg
  )
 
 ## Generate services in the 'srv' folder
